use localstorage for api token

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,7 +7,5 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
-  <body>
-    <div id="main"></div>
-  </body>
+  <body></body>
 </html>
